--- a/build.gradle
+++ b/build.gradle
@@ -6,10 +6,14 @@ apply plugin: 'java'
 repositories {
     mavenCentral()
 }
-
+ext.slf4jVersion='1.7.5'
 dependencies {
 
     compile 'org.projectlombok:lombok:1.12.2'
+    compile 'org.slf4j:slf4j-api:' + slf4jVersion,
+            'org.slf4j:log4j-over-slf4j:' + slf4jVersion,
+            'org.slf4j:jul-to-slf4j:'  + slf4jVersion,
+            'org.slf4j:slf4j-simple:' + slf4jVersion
 
     testCompile group: 'junit', name: 'junit', version: '4.11'
 }
