uploaded 1.0.0 to maven repo

--- a/state-machine/maven-push.gradle
+++ b/state-machine/maven-push.gradle
@@ -76,9 +76,8 @@ afterEvaluate { project ->
         sign configurations.archives
     }
 
-    def uploadFile = file("build/libs/${project.archivesBaseName}-full-${version}.jar")
-
     artifacts {
-        archives jar
+        archives sourcesJar
+        archives javadocJar
     }
 }
