--- a/gradle.properties
+++ b/gradle.properties
@@ -1,8 +1,8 @@
-VERSION_NAME=1.0.1-SNAPSHOT
-VERSION_CODE=2
+VERSION_NAME=1.0.0
+VERSION_CODE=3
 GROUP=com.himanshuvirmani
 
-POM_DESCRIPTION=A Java State library
+POM_DESCRIPTION=A Java State Machine Library
 POM_URL=https://github.com/himanshuvirmani/java-state-machine
 POM_SCM_URL=https://github.com/himanshuvirmani/java-state-machine
 POM_SCM_CONNECTION=scm:git@github.com:himanshuvirmani/java-state-machine.git
