--- a/state-machine/build.gradle
+++ b/state-machine/build.gradle
@@ -1,5 +1,5 @@
 group 'com.himanshuvirmani'
-version '1.0.1-SNAPSHOT'
+version '1.0.0'
 
 apply plugin: 'java'
 apply from: 'maven-push.gradle'
@@ -19,10 +19,6 @@ dependencies {
     testCompile group: 'junit', name: 'junit', version: '4.11'
 }
 
-/*task sourceJar(type: Jar) {
-    from sourceSets.main.allJava
-}*/
-
 jar {
     from {
         (configurations.compile).collect {
@@ -35,12 +31,12 @@ jar {
     from files(compileJava)
 }
 
-/*
-task full_jar(type: Jar, dependsOn: classes) {
-    manifest {
-        attributes 'Main-Class': "${project.group}.Main"
-    }
-    from configurations.compile.collect {it.directory ? it : zipTree(it)}
-    from files(compileJava)
-    baseName = "${project.archivesBaseName}-full"
-}*/
+task sourcesJar(type: Jar, dependsOn: classes) {
+    classifier = 'sources'
+    from sourceSets.main.allSource
+}
+
+task javadocJar(type: Jar, dependsOn: javadoc) {
+    classifier = 'javadoc'
+    from javadoc.destinationDir
+}
