--- a/sample/build.gradle
+++ b/sample/build.gradle
@@ -13,7 +13,7 @@ repositories {
 dependencies {
     compile fileTree(dir: 'libs', include: ['*.jar'])
 //    compile project(':state-machine')
-//    compile group: 'com.himanshuvirmani', name: 'java-state-machine', version: '1.0-SNAPSHOT'
+//    compile group: 'com.himanshuvirmani', name: 'java-state-machine', version: '1.0.0'
 
     testCompile group: 'junit', name: 'junit', version: '4.11'
 }
