--- a/sample/build.gradle
+++ b/sample/build.gradle
@@ -11,9 +11,9 @@ repositories {
 }
 
 dependencies {
-    compile fileTree(dir: 'libs', include: ['*.jar'])
+//    compile fileTree(dir: 'libs', include: ['*.jar'])
 //    compile project(':state-machine')
-//    compile group: 'com.himanshuvirmani', name: 'java-state-machine', version: '1.0.0'
+    compile group: 'com.himanshuvirmani', name: 'java-state-machine', version: '1.0.3'
 
     testCompile group: 'junit', name: 'junit', version: '4.11'
 }
